<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                    android:padding="10dp"
                    style="@style/TextAppearance.MaterialComponents.Headline4"
                    android:text="@string/header_what_is_a_fodmap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <com.google.android.material.textview.MaterialTextView
                    android:padding="20dp"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:text="@string/body_what_is_a_fodmap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="5dp"
                    android:background="?android:attr/listDivider"
            />
            <com.google.android.material.textview.MaterialTextView
                    android:padding="10dp"
                    style="@style/TextAppearance.MaterialComponents.Headline4"
                    android:text="@string/header_what_do_fodmaps_do"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <com.google.android.material.textview.MaterialTextView
                    android:padding="20dp"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:text="@string/body_what_do_fodmaps_do"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="5dp"
                    android:background="?android:attr/listDivider"
            />

            <com.google.android.material.textview.MaterialTextView
                    android:padding="10dp"
                    style="@style/TextAppearance.MaterialComponents.Headline4"
                    android:text="@string/header_avoid_fodmaps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <com.google.android.material.textview.MaterialTextView
                    android:padding="20dp"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:text="@string/body_avoid_fodmaps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="5dp"
                    android:background="?android:attr/listDivider"
            />

            <com.google.android.material.textview.MaterialTextView
                    android:padding="10dp"
                    style="@style/TextAppearance.MaterialComponents.Headline4"
                    android:text="@string/header_learn_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/learnMore"
                    android:padding="20dp"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:text="@string/body_learn_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="5dp"
                    android:background="?android:attr/listDivider"
            />

            <com.google.android.material.textview.MaterialTextView
                    android:padding="10dp"
                    style="@style/TextAppearance.MaterialComponents.Headline4"
                    android:text="@string/label_sources"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/sourceLinks"
                    android:padding="20dp"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:text="@string/sources_fodmap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
</androidx.core.widget.NestedScrollView>