<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:text="@string/label_search_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:text="@string/label_search_ingredients_include"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/label_add_ingredient_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addIncludeIngredientEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:text="@string/label_add_ingredient"
                android:id="@+id/addIncludeIngredientButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/includeIngredientListRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:text="@string/label_search_ingredients_disclude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/label_add_ingredient_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addDiscludeIngredientEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:text="@string/label_add_ingredient"
                android:id="@+id/addDiscludeIngredientButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/discludeIngredientListRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:text="@string/label_require_all_words"
                    android:layout_weight="0.75"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/requireAllWordsCheckbox"
                    android:layout_weight="0.25"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/updateFoodSearchOptionsButton"
                android:text="@string/label_update_search_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>



</androidx.core.widget.NestedScrollView>